k8s/hetzner/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: projectionv2
  labels:
    name: projectionv2
    project: projection
